[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "cyperf-api"
dynamic = ["version"]
description = "CyPerf REST API"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["CyPerf", "CyPerf REST API", "CyPerf Python", "CyPerf wrapper", "CyPerf Python wrapper"]
authors = [
    {name = "Partha Majumdar", email = "partha.majumdar@keysight.com" }
]
maintainers = [
    {name = "Partha Majumdar", email = "partha.majumdar@keysight.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "urllib3>= 1.25.3",
    "python-dateutil>=2.8.2",
    "pydantic>=2",
    "typing-extensions>=4.7.1",
]

[project.urls]
Documentation = "https://github.com/pmajumdarKS/cyperf#readme.md"
Issues = "https://github.com/pmajumdarKS/cyperf/issues"
Source = "https://github.com/pmajumdarKS/cyperf"

[project.optional-dependencies]
dev = [
    "pytest>=7.2.1",
    "tox>=3.9.0",
    "flake8>=4.0.0",
    "types-python-dateutil>=2.8.19.14",
    "mypy==1.4.1",
]

[project.entry-points."setuptools.finalize_distribution_options"]
setuptools_scm = "setuptools_scm._integration.setuptools:infer_version"

[tool.setuptools_scm]
# Empty is fine

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.mypy]
files = [
  "cyperf",
  "test",  # auto-generated tests
  #"tests", # hand-written tests
]
# TODO: enable "strict" once all these individual checks are passing
# strict = true

# List from: https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

## Getting these passing should be easy
strict_equality = true
strict_concatenate = true

## Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

## These shouldn't be too much additional work, but may be tricky to
## get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

### These next few are various gradations of forcing use of type annotations
#disallow_untyped_calls = true
#disallow_incomplete_defs = true
#disallow_untyped_defs = true
#
### This one isn't too hard to get passing, but return on investment is lower
#no_implicit_reexport = true
#
### This one can be tricky to get passing if you use a lot of untyped libraries
#warn_return_any = true
